--- a/react/Cryptocurrency project/project/package.json
+++ b/react/Cryptocurrency project/project/package.json
@@ -9,8 +9,9 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
     "chart.js": "^3.2.0",
-    "concurrently": "^6.0.2",
+    "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.2",
@@ -24,9 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "server": "cd server && npm run dev",
-    "dev" : "concurrently \"npm start\" \"npm run server\""
+    "dev": "concurrently \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
