--- a/react/Cryptocurrency project/project/package.json
+++ b/react/Cryptocurrency project/project/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@icon/bootstrap-icons": "^1.3.0-alpha.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +14,7 @@
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.4.1",
     "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -24,9 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "server": "cd server && npm run dev",
-    "dev" : "concurrently \"npm start\" \"npm run server\""
+    "dev": "concurrently \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
