--- a/react/Cryptocurrency project/project/package.json
+++ b/react/Cryptocurrency project/project/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.2.0",
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
+    "express-session": "^1.17.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.4.1",
     "react-chartjs-2": "^3.0.2",
