--- a/react/Cryptocurrency project/project/package.json
+++ b/react/Cryptocurrency project/project/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express-session": "^1.17.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.4.1",
     "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.2",
