--- a/react/Cryptocurrency project/project/package.json
+++ b/react/Cryptocurrency project/project/package.json
@@ -9,13 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
     "chart.js": "^3.2.0",
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express-session": "^1.17.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.4.1",
     "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.2",
