--- a/react/Cryptocurrency project/project/package.json
+++ b/react/Cryptocurrency project/project/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express-session": "^1.17.2",
+    "public-ip": "^4.0.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.4.1",
